# arm_controller

./: 57-reactor_arbotix.rules
arm_bringup/: CMakeLists.txt  package.xml
arm_bringup/config/: pincher_arm.yaml  pincher_gripper.yaml
arm_bringup/launch/: arm.launch
arm_bringup/scripts/: fake_joint_pub.py  phantomx_reactor_parallel_motor_joints.py
arm_controller/: CMakeLists.txt  package.xml
arm_controller/src/: armMain.cpp
arm_description/: CMakeLists.txt  package.xml
arm_description/robots/: phantomx_reactor_arm_wrist.urdf.xacro
arm_description/urdf/: phantomx_reactor_wrist.urdf.xacro  reactor_description.URDF
arm_interface/: CMakeLists.txt  package.xml
arm_interface/launch/: arm.launch
arm_interface/scripts/: pick_example.py
arm_interface/src/: JointSpace.cpp  armMain.cpp
arm_interface/srv/: pick.srv~  place.srv
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinematics2.yaml  ompl_planning.yaml  phantomx_reactor_arm.srdf  ros_controllers.yaml
moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  planning_context2.launch  planning_context2.launch~  real.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
